--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Consulta</a></li>
                     <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>                   
                 </ul>
             </nav>
             <div class="social-media">
-                <a href="https://www.facebook.com/lucaaslamin"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.linkedin.com/in/lucas-lamin-mira-a68b97146/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/LucasLaminM"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com/fernanda.c.silveira.5"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/nutrifesilveira/"><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-whatsapp"></i></a>
             </div>
         </aside>
 
         <section class="sessao-conhecimentos" id="conhecimentos">
             <div class="sessao-header">
-                <h1>Conhecimentos</h1>
+                <h1>Consulta</h1>
             </div>
             <div class="conhecimentos">
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fab fa-html5"></i>
-                        <h3>HTML</h3>
+                        <i class="fas fa-leaf"></i>
+                        <h3>Saúde</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At minima asperiores dolor minus eos tempora pariatur ad reprehenderit, ipsam necessitatibus alias adipisci, ex officia veritatis velit quo earum temporibus. Tenetur.</p>
@@ -64,8 +64,8 @@
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fab fa-css3-alt"></i>
-                        <h3>CSS</h3>
+                        <i class="fas fa-user-md"></i>
+                        <h3>Acompanhamento</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia architecto amet dolor aut ratione praesentium eos deserunt cupiditate necessitatibus facere repudiandae, neque tempora, rem aliquid blanditiis dolorum hic nostrum aliquam.</p>
@@ -73,17 +73,17 @@
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fas fa-pencil-alt"></i>
-                        <h3>Desing</h3>
+                        <i class=""></i>
+                        <h3></h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident voluptate ipsa ratione itaque quae nulla suscipit cum est, et pariatur, dolores quia deleniti voluptatibus laborum error reprehenderit, quam non magnam.</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fab fa-js"></i>
-                        <h3>Javascript</h3>
+                        <i class="fas fa-heartbeat"></i>
+                        <h3>Emagrecimento</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum accusamus ut reiciendis qui. Reprehenderit et fuga tempore temporibus ex, autem eos maxime aut odit, asperiores illo minima, unde quibusdam suscipit!</p>
@@ -91,24 +91,16 @@
                 </div>
                 <div class="conhecimento">
                     <div class="conhecimento-header">
-                        <i class="fab fa-bootstrap"></i>
-                        <h3>Bootstrap</h3>
+                        <i class="fas fa-weight"></i>
+                        <h3>Controle de peso</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae velit aperiam necessitatibus eligendi vel quam maiores debitis ipsum quibusdam nostrum maxime unde cumque exercitationem sequi accusamus rem asperiores, esse blanditiis.</p>
                     </div>
                 </div>
-                <div class="conhecimento">
-                    <div class="conhecimento-header">
-                        <i class="fab fa-github"></i>
-                        <h3>Git e GitHub</h3>
-                    </div>
-                    <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam fugit blanditiis, cum, beatae temporibus facere iure magnam unde commodi aliquid veniam doloribus, repellat officia sequi magni aperiam quibusdam ut dolore.</p>
-                    </div>
-                </div>
+                
                 <div class="conhecimento-img-wrapper">
-                    <img src="imagens/conhecimentos.png" alt="imagem conhecimento">
+                    <img src="./imagens/nutri.png" alt="imagem conhecimento">
                 </div>
             </div>
         </section>   
